# openapm

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  Makefile  README.md  docker-compose.test.yml  docker-compose.yml
.github/: SECURITY.md  dependabot.yml  labeler.yml  pull-labels.yml  verify_deps_sync.py  verify_labels.py
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  pr-merged.yml  push.yml  style.yml  tests.yml
client/: pyproject.toml  setup.py
client/openapm/: __init__.py  middlewares.py
client/tests/: test_middlewares.py
server/: Dockerfile  pyproject.toml
server/app/: crud.py  db.py  main.py  models.py
server/app/core/: config.py
server/tests/: conftest.py  test_crud.py  test_transaction.py
