[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openapm"
description = "Python Client for OpenAPM API"
authors = [
    {name = "François-Guillaume Fernandez", email = "fg-feedback@protonmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4"
license = {file = "LICENSE"}
keywords = ["backend", "api", "apm", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["version"]
dependencies = [
    "requests>=2.31.0,<3.0.0",
    "fastapi>=0.109.1,<1.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.3,<9.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
    "pytest-pretty>=1.0.0,<2.0.0"
]
quality = [
    "ruff==0.8.0",
    "mypy==1.13.0",
    "types-urllib3>=1.26.25",
    "asyncpg-stubs>=0.29.0,<1.0.0",
    "pre-commit>=3.8.0,<4.0.0"
]
dev = [
    # test
    "pytest>=8.3.3,<9.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
    "pytest-pretty>=1.0.0,<2.0.0",
    # style
    "mypy==1.13.0",
    "types-urllib3>=1.26.25",
    "pre-commit>=3.8.0,<4.0.0"
]

[project.urls]
documentation = "https://frgfm.github.io/openapm"
repository = "https://github.com/frgfm/openapm"
tracker = "https://github.com/frgfm/openapm/issues"

[tool.setuptools]
zip-safe = true

[tool.setuptools.packages.find]
exclude = ["docs*", "tests*"]

[tool.mypy]
python_version = "3.11"
mypy_path = "client/"
files = "client/openapm"
show_error_codes = true
pretty = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true
implicit_reexport = false
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "requests.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["openapm/"]
